--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 	</script>
 	<div class="container">
 		<div class="editeur">
-			<form method="POST" action="index.php" name="editor">
+			<form method="POST" action="index.html" name="editor">
 				<textarea onclick="this.value=''" name="data" id="textmd"></textarea>
 				<p><input name="filename" placeholder="nom du fichier"></p>
 				<button type="submit" value="Sauvegarder" name="sauvegarde" onclick="set()">Sauvegarder</button>
